turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:4: error: value lenght is not a member of Array[java.awt.Color]
  while (getCouleurSol()!=colors(i)){i+=1;i=i%colors.lenght}
                                                     ^